src/components/ui/Inputs/InputTypeSelect/InputTypeSelect.module.css
:global(html, .react-select__value-container) {
  font-weight: 400;

  padding: 0;
}

:global(html, .react-select__input-container) {
  margin: 0;
  padding: 0;
}

:global(html .react-select__single-value) {
  padding: 0;
}

:global(html .react-select__option) {
  font-size: 12px;
  font-weight: 300;
}

:global(html .react-select__option--is-selected) {
  color: #000;
  font-size: 12px;

  background-color: rgba(217, 217, 217, 0.15);
}

:global(html .react-select__option--is-focused) {
  cursor: pointer;

  color: #fff;
  font-size: 12px;

  background-color: #5ccb81;
}

@media (min-width: 768px) {
  :global(html .react-select__option) {
    font-size: 16px;
    font-weight: 300;
  }

  :global(html .react-select__option--is-selected) {
    font-size: 16px;
  }

  :global(html .react-select__option--is-focused) {
    font-size: 16px;
  }
}

